--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="stylesheet.css">
-	<link rel="font awesome" href="https://fontawesome.com/">
+	<link rel="stylesheet" href="fontawesome-free-6.0.0-web/css/all.min.css">
 	<title>Document</title>
 </head>
 <body>
 	<div class="header">
 		<h1 class="tittle">My Website</h1>
+		<div><span class="fa fa-bars menu"></span></div>
 		<ul class="list">
 			<li>HTML</li>
 			<li>CSS</li>
@@ -32,32 +33,32 @@
 		<div class="kotak">
 			<h3>HTML</h3>
 			<p>A markup language to build a website</p>
-			<P>Difficulty:<span class="fa fa-star"></span></P>
-			<a class="link "ref="#">See more</a>
+			<P>Difficulty: <span class="fa-regular fa-star"></span></P>
+			<a class="link "href="#">See more <span class="fa fa-arrow-right-long"></span></a>
 		</div>
 		<div class="kotak">
 			<h3>CSS</h3>
 			<p>A markup language to build a website</p>
-			<P>Difficulty:<span class="fa fa-star"></span></P>
-			<a class="link "ref="#">See more</a>
+			<P>Difficulty: <span class="fa-regular fa-star"></span></P>
+			<a class="link "href="#">See more <span class="fa fa-arrow-right-long"></span></a>
 		</div>
 		<div class="kotak">
 			<h3>JavaScript</h3>
 			<p>A markup language to build a website</p>
-			<P>Difficulty:<span class="fa fa-star"></span></P>
-			<a class="link "ref="#">See more</a>
+			<P>Difficulty: <span class="fa-regular fa-star"><span class="fa-regular fa-star"></span></span></P>
+			<a class="link "href="#">See more <span class="fa fa-arrow-right-long"></span></a>
 		</div>
 		<div class="kotak">
 			<h3>Node</h3>
 			<p>A markup language to build a website</p>
-			<P>Difficulty:<span class="fa fa-star"></span></P>
-			<a class="link "ref="#">See more</a>
+			<P>Difficulty: <span class="fa-regular fa-star"><span class="fa-regular fa-star"></span><span class="fa-regular fa-star"></span></span></P>
+			<a class="link "href="#">See more <span class="fa fa-arrow-right-long"></span> </a>
 		</div>
 		<div class="kotak">
 			<h3>React</h3>
 			<p>A markup language to build a website</p>
-			<P>Difficulty:<span class="fa fa-star"></span></P>
-			<a class="link "ref="#">See more</a>
+			<P>Difficulty: <span class="fa-regular fa-star"><span class="fa fa-regular fa-star"></span><span class="fa-regular fa-star"></span></span></P>
+			<a class="link "href="#">See more <span class="fa fa-arrow-right-long"></span> </a>
 		</div>
 	</div>
 
